# tree-sitter-typescript-wasm-repro

./: Cargo.toml  README.md  mise.toml
src/: lib.rs
tests/: wasm.rs
